# Astrix

./: README.md  pyproject.toml
astrix/: cli.py
astrix/features/: callgraph.py  class_heirarchy.py  code_quality.py  conflict_management.py  dependency.py  dependency_analysis.py
tests/: test_analyze.py  test_callgraph.py  test_class_info.py  test_deps.py  test_install.py  test_maintainability.py
