[tool.poetry]
name = "astrix"
version = "0.1.7"
description = "Your All-in-One Python Project Analyzer"
authors = ["Ashwin <ashwinrb74@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
radon = "^6.0.1"
tabulate = "^0.9.0"
networkx = "^3.3"
matplotlib = "^3.9.2"
toml = "^0.10.2"
requests = "^2.32.3"
stdlib-list = "^0.10.0"
pytest = "^8.3.3"

[tool.poetry.scripts]
astrix = "astrix.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
